1998-08-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* tkobjc.m: Add PixmapError error variable.

	* internal.m (xpmerrcheck, tkobjc_pixmap_create_from_window): 
	New functions.
	(tkobjc_pixmap_create): image is now an instance variable of
	Pixmap, deference through pixmap. 

	* internal.[hm] (tkobjc_pixmap_create_from_root_window,
	tkobjc_pixmap_save, tkobjc_pixmap_drop): New functions.

	* Pixmap.m ([Pixmap -setFile:]): Remove.  
	([Pixmap -setRaster:]): Move to using phase.
	([Pixmap -createEnd]): Remove. 
	([Pixmap +create:file:]): New method, call _loadPNG_.
	([Pixmap +create:widget:]): New method.
	([Pixmap -save:], [Pixmap -_loadPNG_:], [Pixmap -drop]): New methods.

	* Pixmap.h: Declare PixmapError.
	(Pixmap): Remove filename.  Add display and xpmimage.
	Remove createEnd and setFile:.  Add +create:file: and +create:widget:
	and save:.

1998-08-05  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* comm.tcl: Trap errors from lookup of application port, and
	try non-namespace qualified lookup (shouldn't come up, since 
	this script is only used on Windows, and we'll always use the
	latest version of BLT there).

	* Makefile.am (tkobjc.lo): Make this the only thing depending on
	TCLFILES.

1998-08-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Pixmap.m ([Pixmap -createEnd]): Move row_columns to block with
	row_pointers, initialize it there, not in RGB vs.  palette
	conditional.  Free row_pointers after the map has been dropped.
	Add sanity check for missing indices for a given RGB triplet.

1998-08-02  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Pixmap.m (compareRGB): New function.
	([Pixmap -createEnd]): Add support for RGB format PNG files;
	uniquify colors and re-paletteize. 

	* global.h, tkobjc.m (initTkObjc): Add PaletteError.

	* internal.m: Use it.

1998-07-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am: Add override to append of CFLAGS with X_CFLAGS.

	* TkExtra.m: Don't include unistd.h.
